tests/snapshots/parser@update.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/update.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 17,
        },
        source: "v.foo++;\nv.bar--;\n",
        body: Complex(
            [
                Update(
                    UpdateStatement {
                        span: Span {
                            start: 0,
                            end: 7,
                        },
                        variable: VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                        operator: Increment,
                    },
                ),
                Update(
                    UpdateStatement {
                        span: Span {
                            start: 9,
                            end: 16,
                        },
                        variable: VariableExpression {
                            span: Span {
                                start: 9,
                                end: 14,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 11,
                                        end: 14,
                                    },
                                    name: "bar",
                                },
                            },
                        },
                        operator: Decrement,
                    },
                ),
            ],
        ),
    },
    errors: [],
}
