tests/snapshots/parser@update_with_context.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/update_with_context.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "c.foo++;\n",
        body: Complex(
            [
                Update(
                    UpdateStatement {
                        span: Span {
                            start: 0,
                            end: 7,
                        },
                        variable: VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            scope: Context,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                        operator: Increment,
                    },
                ),
            ],
        ),
    },
    errors: [],
}
