tests/snapshots/parser@update_with_query.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/update_with_query.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "q.random()++\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "`++` and `--` can only be used on `variable.*` and `temp.*`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: 10,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
}
