tests/snapshots/parser@update_with_simple.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/update_with_simple.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 7,
        },
        source: "v.foo++\n",
        body: Complex(
            [
                Update(
                    UpdateStatement {
                        span: Span {
                            start: 0,
                            end: 7,
                        },
                        variable: VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                        operator: Increment,
                    },
                ),
            ],
        ),
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "semicolons are required for complex programs (containing `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    8,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
}
