tests/snapshots/parser@variable.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/variable.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 57,
        },
        source: "variable.foo;\nv.foo;\ntemp.foo;\nt.foo;\ncontext.foo;\nc.foo;\n",
        body: Complex(
            [
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 0,
                                end: 12,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 9,
                                        end: 12,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 14,
                                end: 19,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 16,
                                        end: 19,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 21,
                                end: 29,
                            },
                            scope: Temporary,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 26,
                                        end: 29,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 31,
                                end: 36,
                            },
                            scope: Temporary,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 33,
                                        end: 36,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 38,
                                end: 49,
                            },
                            scope: Context,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 46,
                                        end: 49,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 51,
                                end: 56,
                            },
                            scope: Context,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 53,
                                        end: 56,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
}
