tests/snapshots/parser@variable_member_keyword.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/variable_member_keyword.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 46,
        },
        source: "variable.v.temp.t.context.c.query.q.math.a.b.c\n",
        body: Simple(
            Variable(
                VariableExpression {
                    span: Span {
                        start: 0,
                        end: 46,
                    },
                    scope: Variable,
                    member: Object {
                        object: Object {
                            object: Object {
                                object: Object {
                                    object: Object {
                                        object: Object {
                                            object: Object {
                                                object: Object {
                                                    object: Object {
                                                        object: Object {
                                                            object: Property {
                                                                property: Identifier {
                                                                    span: Span {
                                                                        start: 9,
                                                                        end: 10,
                                                                    },
                                                                    name: "v",
                                                                },
                                                            },
                                                            property: Identifier {
                                                                span: Span {
                                                                    start: 11,
                                                                    end: 15,
                                                                },
                                                                name: "temp",
                                                            },
                                                        },
                                                        property: Identifier {
                                                            span: Span {
                                                                start: 16,
                                                                end: 17,
                                                            },
                                                            name: "t",
                                                        },
                                                    },
                                                    property: Identifier {
                                                        span: Span {
                                                            start: 18,
                                                            end: 25,
                                                        },
                                                        name: "context",
                                                    },
                                                },
                                                property: Identifier {
                                                    span: Span {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                    name: "c",
                                                },
                                            },
                                            property: Identifier {
                                                span: Span {
                                                    start: 28,
                                                    end: 33,
                                                },
                                                name: "query",
                                            },
                                        },
                                        property: Identifier {
                                            span: Span {
                                                start: 34,
                                                end: 35,
                                            },
                                            name: "q",
                                        },
                                    },
                                    property: Identifier {
                                        span: Span {
                                            start: 36,
                                            end: 40,
                                        },
                                        name: "math",
                                    },
                                },
                                property: Identifier {
                                    span: Span {
                                        start: 41,
                                        end: 42,
                                    },
                                    name: "a",
                                },
                            },
                            property: Identifier {
                                span: Span {
                                    start: 43,
                                    end: 44,
                                },
                                name: "b",
                            },
                        },
                        property: Identifier {
                            span: Span {
                                start: 45,
                                end: 46,
                            },
                            name: "c",
                        },
                    },
                },
            ),
        ),
    },
    errors: [],
}
