tests/snapshots/semantic@block_empty.nolana.snap
---
source: tests/integration.rs
input_file: tests/semantic/block_empty.nolana
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "Block expressions must contain at least one expression",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 2,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
