tests/snapshots/semantic@control_flow_outside_loop.nolana.snap
---
source: tests/integration.rs
input_file: tests/semantic/control_flow_outside_loop.nolana
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`break` is only supported inside `loop` and `for_each` expressions",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 5,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
    Diagnostic {
        inner: DiagnosticInner {
            message: "`continue` is only supported inside `loop` and `for_each` expressions",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                7,
                            ),
                            length: 8,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
