tests/snapshots/semantic@for_each_context_first_arg.nolana.snap
---
source: tests/integration.rs
input_file: tests/semantic/for_each_context_first_arg.nolana
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`for_each` first argument must be either `variable.*` or `temp.*`",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                9,
                            ),
                            length: 5,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
