tests/snapshots/semantic@update_context.nolana.snap
---
source: tests/integration.rs
input_file: tests/semantic/update_context.nolana
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`context.*` variables are read-only",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 13,
                        },
                        primary: false,
                    },
                ],
            ),
            help: Some(
                "try using `variable.*` or `temp.*` instead",
            ),
            severity: Error,
        },
    },
]
